// Copyright (C) 2018 go-gamc authors
//
// This file is part of the go-gamc library.
//
// the go-gamc library is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// the go-gamc library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with the go-gamc library.  If not, see <http://www.gnu.org/licenses/>.
//

syntax = "proto3";

package corepb;

message Data {
	string type = 1;
	bytes msg = 2;
}

message Signature{
    bytes signer = 1;
    bytes data = 2;
}

message Transaction {
    bytes hash = 1;
    bytes from = 2;
    bytes to = 3;
    bytes value = 4;
    uint64 nonce = 5;
	uint32 chain_id  = 6;
	bytes fee = 7;
	int64 timestamp= 8;
	Data data = 9;
	uint32 priority = 10;
	Signature sign = 11;
}

message Witness {
	bytes master = 1;
	repeated bytes followers = 2;
}

message PsecData {
	int64 term = 1;
	int64 timestamp = 2;
}

message BlockHeader {
    bytes    hash = 1;
    bytes    parent_hash = 2;
    bytes    coinbase = 3;
    int64    timestamp = 4;
	uint32   chain_id = 5;
	uint64   height = 6;
	bytes    witness_reward = 7;
	repeated Witness witnesses = 8;
	bytes    state_root= 9;
	bytes    txs_root = 10;
	PsecData psec_data = 11;
	Signature sign = 12;
	bytes    extra = 13;
}

message Block {
    bytes hash = 1;
    BlockHeader header = 2;
    repeated Transaction body = 3;
}

message DownloadBlock {
    bytes hash = 1;
    Signature sign = 2;
}